--- a/src/App.css
+++ b/src/App.css
@@ -250,3 +250,12 @@ body {
 .editor-textarea:focus {
   outline: none;
 }
+
+.new-note-btn:focus,
+.add-category-btn:focus,
+.delete-note-btn:focus,
+.category-actions button:focus,
+.category-item:focus,
+.note-list-item:focus {
+  outline: none;
+}
